--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ body {
   background: var(--foreground);
   height: 2px;
   color: #ecf0f1dc;
-  bottom: -5;
+  bottom: -4px;
   left: 0;
   transition: all 500ms;
   width: 100%;
