--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,15 +113,14 @@ body {
 .ExperienceCard:hover .designedShadow img {
   transform: scale(1);
 }
-ul {
+/* ul {
   list-style-type: disc;
-  /* list-style-type: "."; */
   margin-left: 20px;
 }
 
 li {
   margin-bottom: 10px;
-}
+} */
 .myCcollapse {
   transition: all 500ms;
   -webkit-transition: all 500ms;
@@ -132,4 +131,26 @@ li {
 
 .slick-arrow {
   display: none !important;
+}
+
+.designHeading {
+  @apply text-gray2 text-xl md:text-2xl font-medium text-left;
+}
+.designTitle {
+  @apply text-gray2 text-sm md:text-base whitespace-normal text-left font-light leading-7 md:leading-8;
+}
+.designTitleBold {
+  @apply text-gray2 text-sm md:text-base whitespace-normal text-left font-medium leading-7 md:leading-8;
+}
+.designHeading2 {
+  @apply text-gray2 text-base md:text-lg font-medium text-left;
+}
+.contactMe::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: #000;
+  position: absolute;
+  top: 160%;
+  left: 0;
 }
