--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -154,3 +154,12 @@ li {
   top: 160%;
   left: 0;
 }
+.tooltip::after {
+  content: "";
+  border: 4px solid transparent;
+  position: absolute;
+  top: 0px;
+  transform: translate(0%, -90%);
+  left: 8px;
+  border-bottom-color: var(--foreground);
+}
